# esycord

./: LISENCE  README.md  README.rst  __init__.py  __main__.py  bot.py  pyproject.toml  requirements.txt  slash.py  variable_functions.py
.github/workflows/: python-publish.yml
data/: __init__.py  channel.py
docs/: examples.md  main.md
src/easycord/: __init__.py
src/easycord/data/: __init__.py
src/esycord/: __init__.py  __internals.py  __main__.py  data.py  esycord.py
src/esycord/data/: __init__.py  guild.py  user.py
